Finished some more docu. Started to work on tricky part of explaining how NCE works

--- a/FDS_Word2Vec.ipynb
+++ b/FDS_Word2Vec.ipynb
@@ -22,7 +22,10 @@
     "# Einleitung\n",
     "Über das FragDenStaat-Portal werden Anfragen an Behörden in Deutschland gesammelt und zur Verfügung gestellt. Durch die stetig wachsende Popularität des Portals liegt diesem Projekt ein umfangreicher Datensatz vor, dessen Informationsgehalt im Laufe dieses Notebooks mit Hilfe eines Word2Vec Modells möglichst weit ausgeschöpft werden soll.\n",
     "\n",
-    "Grober Ablauf: Zunächst werden die bereits bereinigten Daten für die Weiterverarbeitung aufbereitet und randomisiert. Tatsächliche Input-Daten werden daraufhin durch die indexierung und Speicherung in Lookup-Tables generiert. Mithilfe von Context-Windows können nun Input-Target-Wörter mit entsprechenden Labels aus Daten abgeleitet und für alle Sätze erzeugt werden. Das eigentlich Kernstück des Notebooks bildet dann das Skip-Gramm Modell als Hidden-Layer, welches in sequentiellen Batches über mehrere Epochen die Weights per Loss trainiert. Die daraus resultierenden Word-Embeddings können nun genutzt werden um Dokumenten-Vektoren aufzubauen. Diese oder auch einfache Wort-Vektoren können mithilfe der Cosine-Similarity verglichen werden. Abschließend wird versucht, die Word-Embeddings in verschieden Arten und unter zuhilfenahme des TSNE-Algorithmus zu visualiseren bzw. Ähnlichkeiten zu clustern."
+    "Grober Ablauf: Zunächst werden die bereits bereinigten Daten für die Weiterverarbeitung aufbereitet und randomisiert. Tatsächliche Input-Daten werden daraufhin durch die indexierung und Speicherung in Lookup-Tables generiert. Mithilfe von Context-Windows können nun Input-Target-Wörter mit entsprechenden Labels aus Daten abgeleitet und für alle Sätze erzeugt werden. Das eigentlich Kernstück des Notebooks bildet dann das Skip-Gramm Modell als Hidden-Layer, welches in sequentiellen Batches über mehrere Epochen die Weights per Loss trainiert. Die daraus resultierenden Word-Embeddings können nun genutzt werden um Dokumenten-Vektoren aufzubauen. Diese oder auch einfache Wort-Vektoren können mithilfe der Cosine-Similarity verglichen werden. Abschließend wird versucht, die Word-Embeddings in verschieden Arten und unter zuhilfenahme des TSNE-Algorithmus zu visualiseren bzw. Ähnlichkeiten zu clustern.\n",
+    "\n",
+    "Für allgemeine hintergrundinformationen zu den einzelnen hier im Modul angewandte Techniken und auch Details zur Entscheidungsfindung lohnt sich zudem ein Blick in das [Exposé](Documents/NN-Projekt-Expose.pdf).\n",
+    "\n"
    ]
   },
   {
@@ -916,7 +919,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Input-Target-Wörter mit entsprechenden Labels aus Daten ableiten"
+    "## Input-Target-Wörter mit entsprechenden Labels aus Daten ableiten\n",
+    "[INFO] Ich hab jetzt den Abschnitt zu Language Modell und Skip-Gram als auch Word-Embeddings hier hin vorgezogen. Hier war ursprünglich nur Context-Window. Aber ich finde es gut, wenn man hier schon den Background mit den Word-Embeds erklärt. Was meinst du?\n"
    ]
   },
   {
@@ -935,13 +939,18 @@
     "### Language Modelling\n",
     "Je nach Ansatz ist es das Ziel eines Language Modells, für ein gegebenes Wort möglichst Präzise vorhersagen zu treffen, welches Wort darauf folgen könnte (CBOW) oder anhand eines Wortes die umgebenden Wörter vorherzusagen (Skipgram). Anhand der im vorherigen Abschnitt erstellten Word Embeddings können wir einzelne Wörter oder ganze Sätze leicht vergleichen und prüfen, ob Sie in einem kontextuellen Zusammenhang stehen. \n",
     "\n",
-    "### Context Window\n",
-    "Natürlich muss ein solches Language-Modell ausgiebig trainiert werden. Mittels Context-Windows, also ein Ausschnitt von umgebenden Wörtern, veruschen wir Wort-Paare aus Target-Wörtern und Label-Wörtern zu erstellen, die häufig zusammen auftreten. Angenommen wir nutzen Window-Size=2, dann betrachten wir in jedem Wort eines Satzes die zwei Wörter (\"labels\") vor und nach dem fokusierten Wort (\"target\") und notieren dieses gemeinsame Auftreten."
+    "### Context Window (Skip-Gram Modell)\n",
+    "Natürlich muss ein solches Language-Modell ausgiebig trainiert werden. Mittels Context-Windows, also ein Ausschnitt von umgebenden Wörtern, veruschen wir Wort-Paare aus Target-Wörtern und Label-Wörtern zu erstellen, die häufig zusammen auftreten. Angenommen wir nutzen Window-Size=2, dann betrachten wir in jedem Wort eines Satzes die zwei Wörter (\"labels\") vor und nach dem fokusierten Wort (\"target\") und notieren dieses gemeinsame Auftreten. In folgendem Beispiel wird die Context-Window Methode an einem Skip-Gram Modell dargestellt. Das Wort \"red\" ist ein target (=output) und die jeweils umgebenden Wörter sind die labels (=input):\n",
+    "\n",
+    "<img src=\"Images/skipgram-sliding-window-samples.png\" alt=\"drawing\" width=\"400\"/>\n",
+    "TODO/QUELLE: https://jalammar.github.io/illustrated-word2vec/\n",
+    "\n",
+    "Context-Windows arbeiten mit einzelnen Sätzen und beim Beginn und Ende eines jeden Satzes muss zudem darauf geachtet werden, dass mit dem Window nicht vor oder nach dem Satz (Nan) geslided wird. Die folgende Implementierung erzeugt nun die target-label paare, wobei anstelle realer Wörter im weiteren Verlauf die Wort-Indizes genutzt werden (siehe Beispiel). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -973,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1017,12 +1026,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generiert Target-Wortliste mit entsprechenden Wortkontexten für alle Sätze der Anfragetexte:"
+    "### Generiert Target-Wortliste mit entsprechenden Wortkontexten für alle Sätze der Anfragetexte:\n",
+    "Nach den Beispielen kann die Context-Window Funktion nun auf alle Sätze in den Input-Daten angewandt werden. Weitere Beispiele mit Ausschnitten aus dem Gesamtdatenbestand bieten zudem zur besseren veranschaulichung ein Re-Mapping der Word-Indexe auf die realen Wörter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1059,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1143,12 +1153,12 @@
    "metadata": {},
    "source": [
     "# Generate Trainings-Batch:\n",
-    "... generiert iterativ Teilsequenzen aus der Target- und Labelliste (wichtig für Training)"
+    "Folgende Hilfsfunktion generiert iterativ Teilsequenzen (Batches) aus den target-label Paaren. Im Return-Wert der Funktion ist ein einzelner Batch und mithilfe der Variable `data_index` wird die aktuelle Iterationsposition im Gesamtdatensatz zwischengespeichert und resetted, sobald das Ende des Gesamtdatensatzes erreicht wurde. Für den späteren Trainingsprozess spielt die Batch-Size eine nicht unterhebliche Rolle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1160,7 +1170,7 @@
     "def generate_batch(batch_size, targets_list, labels_list):\n",
     "    '''\n",
     "    Generiert den Trainigs-Batch\n",
-    "    #:param window_size: Anzahl der Wörter links und rechts des target wortes\n",
+    "    #:param window_size: Anzahl der Wörter links und rechts des target wortes [TODO] KANN DAS RAUS???\n",
     "    :return batch: targets\n",
     "    :return labels\n",
     "    '''\n",
@@ -1185,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1243,7 +1253,7 @@
    "metadata": {},
    "source": [
     "# Build und Trainiere Skip-Gram Model\n",
-    "... was/warum ist skipgram (wiederholung aus expose)"
+    "Bis hierhin sollte klar sein was die Funktion eines Skip-Gram Models und deren target-label Paaren, eines Context Window und eines Batches ist. Mit diesem Wissen steht dem eigentlichen Model-Training nichts mehr im Wege! Fast. Vor dem Training dürfen bietet sich zunächst die letzte Möglichkeit, mit einstellbaren Parametern Einfluss auf den Verlauf des Trainings zu nehmen. Neben den bereits bekannten Begriffen müssen noch ein paar wenige neue Parameter verstanden und eingestellt werden, die einen erheblichen Einfluss auf den weiteren Trainingsverlauf ausüben."
    ]
   },
   {
@@ -1251,15 +1261,14 @@
    "metadata": {},
    "source": [
     "### Einstellbare Parameter:\n",
-    "In der folgenden Zelle befinden sich frei definierbare Parameter, die mit einem erheblichen Einfluss, den Ausgang des weiteren Trainingverlaufes beeinflussen.\n",
     "\n",
-    "* Batch Size: Anzahl der berückstichtigten Target-Label-Paare pro Trainingsiteration\n",
-    "* Embeddings Size: Dimensionsgröße der Word-Embeddings \n",
-    "    * Wert von 300 zeigt sich als guter Kompromiss von Performanz und Genauigkeit\n",
-    "* Skip Window: Anzahl der berüchtigten Wörter links und rechts (Nachbarwörter) eines Targetwortes für Bildung der Target-Label-Paare\n",
-    "* Num Sampled: Anzahl der Negative Samples für NCE Loss (siehe weiter unten)\n",
+    "* `batch_size`: Anzahl der berückstichtigten Target-Label-Paare pro Trainingsiteration\n",
+    "* `embedding_size`: Dimensionsgröße der Word-Embeddings \n",
+    "    * -> Wert von 300 zeigt sich als guter Kompromiss von Performace und Genauigkeit\n",
+    "* `skip_window`: Anzahl der berüchtigten Wörter links und rechts (Nachbarwörter) eines Targetwortes für Bildung der Target-Label-Paare\n",
+    "* `num_sampled` Anzahl der Negative Samples für NCE Loss (siehe weiter unten)\n",
     "* Anpassung der sich exponentiell verringerten Lernrate (Start-/End-Learning-Rate)\n",
-    "* Epochs: Anzahl der Epochen, also Anzahl der Iterationen die benötigt werden um einmal alle Target-Label-Paare zu durchlaufen"
+    "* `epochs`: Anzahl der Epochen, also Anzahl der Iterationen die benötigt werden um einmal alle Target-Label-Paare zu durchlaufen"
    ]
   },
   {
@@ -1289,7 +1298,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generieren der Target- und Labelliste für alle Anfragetexte, basierend auf der eingestellten Skip Window Size:"
+    "## Generieren der Target- und Labelliste für alle Anfragetexte, basierend auf der eingestellten Skip Window Size:\n",
+    "\n",
+    "Zu Beginn des Trainings werden nun alle Target-Word Paare aller Anfragetexte des Gesamtdatenbestandes aufgrund der im vorherigen Schritt eingestellten Window-Size generiert."
    ]
   },
   {
@@ -1305,7 +1316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wichtige fixe Parameter, abgeleitet aus den einstellbaren Parametern:"
+    "Es folgen einige Berechnungen für wichtige, fixe Parameter die aus den einstellbaren Parametern abgeleitet werden können."
    ]
   },
   {
@@ -1345,7 +1356,27 @@
    "metadata": {},
    "source": [
     "# Build Graph:\n",
-    "... Erklärung zur Modellarchitektur, Skipgram, NCE, negative sampling usw."
+    "... Erklärung zur Modellarchitektur, Skipgram, NCE, negative sampling usw.\n",
+    "\n",
+    "Mit eingestellten Parametern und allen generierten Target-Label Paare der Anfragetexte kann nun die Modellarchitektur festgelegt werden. Zunächst werden Tensorflow Placeholder definiert und dann die Word Embedings (Anzahl uniquer Wörter x Anzahl Features/Dimension) mit einem random Wert zwischen 0 und 1 initialisiert. Auf die gleiche Weiße erhalten auch unsere Weights initiale Werte. Der Bias wird mit Nullen initialisiert. Bereits im vorherigen Schritt wurd die Start-Lernrate errechnet (delta aus maximal- und minimal-lernrate), welche nun in der Modell-Architektur in einen exponential decay Funktion gepackt wird und somit im späteren Training evolutionär angepasst werden kann. Für die komplette Trainingsarchitektur fehlt jetzt nur noch ein Klassifizierungsverfahren und eine Loss-Funktion.\n",
+    "\n",
+    "## Noise Contrastive estimation (NCE)\n",
+    "\n",
+    "Für einen gegebenen Kontext soll das Modell die Wahrscheinlichkeit des passenden Wortes bestimmen. Ein weit verbreitetes und erfahrungsgemäß gutes Klassifizierungsverfahren hierfür ist der Softmax-Classifier. Dieser stellte sich aber während des Trainings als maximal rechenintensiv heraus, da für einen Kontext das ganze Vokabular (mehr als 1 Mio Wörter) mit Wahrscheinlichkeiten belegt werden muss, bzw. die Gewichtsmatrix `[embedding_dim x vocab_dim]` sehr groß ist ([Wiederholung: Softmax-Klassifier](https://www.pyimagesearch.com/2016/09/12/softmax-classifiers-explained/), [Hintergrundwissen: Warum kein Softmax](https://arxiv.org/pdf/1410.8251.pdf))\n",
+    "\n",
+    "## Negative Sampling\n",
+    "Um nicht über das ganze Vokabular bei jedem Context trainieren zu müssen aber trotzdem keine spürbaren einbußen beim Training der Emebdings zu erleiden, kann Negativ Sampling genutzt werden. Hierbei wird das Gesamtvokabular, also die Menge an Wörtern die auf Ähnlichkeit überprüft werden, auf einen Teil mit passenden Label-Wörtern und einen Teil mit gänzlich unpassenden Wörtern (\"Noise\") reduziert. Das Modell kann somit anhand sehr guter und sehr schlechter Begriffe Lernen, ohne dabei jedes mal das gesamte Vokabular durchforsten zu müssen. Durch diese künstliche reduzierung der Grunddatenmenge, wird jedoch nicht die Genauigkeit des Models in Mitleidenschaft gezogen ([TODO] QUELLE: https://arxiv.org/pdf/1410.8251.pdf).\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Tensorflow Placeholder initialisieren\n",
+    "- embeddings initialisieren: für jedes unique Wort die eingestellte Anzahl Features (Dimension) mit random Wert zwischen 0 und 1\n",
+    "- NCE Weights\n",
+    "- NCE Bias\n",
+    "- Lernrate wird exponentiell mit exp_decay_lr veringert\n",
+    "- GradientDescentOptimizer\n",
+    "- Kurz erklären warum normalization doof war\n",
+    "\n"
    ]
   },
   {
