--- a/FDS_Word2Vec.ipynb
+++ b/FDS_Word2Vec.ipynb
@@ -1356,7 +1356,6 @@
    "metadata": {},
    "source": [
     "# Build Graph:\n",
-    "... Erklärung zur Modellarchitektur, Skipgram, NCE, negative sampling usw.\n",
     "\n",
     "Mit eingestellten Parametern und allen generierten Target-Label Paare der Anfragetexte kann nun die Modellarchitektur festgelegt werden. Zunächst werden Tensorflow Placeholder definiert und dann die Word Embedings (Anzahl uniquer Wörter x Anzahl Features/Dimension) mit einem random Wert zwischen 0 und 1 initialisiert. Auf die gleiche Weiße erhalten auch unsere Weights initiale Werte. Der Bias wird mit Nullen initialisiert. Bereits im vorherigen Schritt wurd die Start-Lernrate errechnet (delta aus maximal- und minimal-lernrate), welche nun in der Modell-Architektur in einen exponential decay Funktion gepackt wird und somit im späteren Training evolutionär angepasst werden kann. Für die komplette Trainingsarchitektur fehlt jetzt nur noch ein Klassifizierungsverfahren und eine Loss-Funktion.\n",
     "\n",
@@ -1364,19 +1363,28 @@
     "\n",
     "Für einen gegebenen Kontext soll das Modell die Wahrscheinlichkeit des passenden Wortes bestimmen. Ein weit verbreitetes und erfahrungsgemäß gutes Klassifizierungsverfahren hierfür ist der Softmax-Classifier. Dieser stellte sich aber während des Trainings als maximal rechenintensiv heraus, da für einen Kontext das ganze Vokabular (mehr als 1 Mio Wörter) mit Wahrscheinlichkeiten belegt werden muss, bzw. die Gewichtsmatrix `[embedding_dim x vocab_dim]` sehr groß ist ([Wiederholung: Softmax-Klassifier](https://www.pyimagesearch.com/2016/09/12/softmax-classifiers-explained/), [Hintergrundwissen: Warum kein Softmax](https://arxiv.org/pdf/1410.8251.pdf))\n",
     "\n",
-    "## Negative Sampling\n",
-    "Um nicht über das ganze Vokabular bei jedem Context trainieren zu müssen aber trotzdem keine spürbaren einbußen beim Training der Emebdings zu erleiden, kann Negativ Sampling genutzt werden. Hierbei wird das Gesamtvokabular, also die Menge an Wörtern die auf Ähnlichkeit überprüft werden, auf einen Teil mit passenden Label-Wörtern und einen Teil mit gänzlich unpassenden Wörtern (\"Noise\") reduziert. Das Modell kann somit anhand sehr guter und sehr schlechter Begriffe Lernen, ohne dabei jedes mal das gesamte Vokabular durchforsten zu müssen. Durch diese künstliche reduzierung der Grunddatenmenge, wird jedoch nicht die Genauigkeit des Models in Mitleidenschaft gezogen ([TODO] QUELLE: https://arxiv.org/pdf/1410.8251.pdf).\n",
+    "Um nicht über das ganze Vokabular bei jedem Context trainieren zu müssen, aber trotzdem keine spürbaren einbußen beim Training der Emebdings zu erleiden, kann NCE genutzt werden. Hierbei wird das Gesamtvokabular, also die Menge an Wörtern die auf Ähnlichkeit überprüft werden, auf einen Teil mit dem/den passenden Label/n und einen Teil mit gänzlich unpassenden Wörtern (\"Contrastive Noise\") reduziert. Zudem wird die Vorhersage auf ein Klassifikationsproblem (richtig/falsch) reduziert (vgl. Softmax: Normalverteilt), labels und noise bekommen also die Werte 0 und 1. Das Modell kann somit anhand sehr guter und schlechter Begriffe Lernen, ohne dabei jedes mal das gesamte Vokabular durchforsten zu müssen. Hierin liegt zugleich der entscheidende Punkt bei NCE: Wir können unsere Noise-Verteilung frei bestimmen, z.B. können nur Wörter mit ganz geringer Häufigkeit selektiert, oder alle Wörter mit gleicher Wahrscheinlichkeit oder einfache einfach eine Normalverteilung. Durch diese künstliche reduzierung der Grunddatenmenge, wird jedoch nicht die Genauigkeit des Models in Mitleidenschaft gezogen ([TODO] QUELLE: http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf). \n",
+    "Da das Problem bereits auf eine klassische \"Richtig oder Falsch\"-Frage reduziert wurde, kann in NCE die logistische Regression zur Klassifikation herangezogen werden und dann unsere WordEmbeddings mit dem GradientDescentOptimizer optimiert werden. Eine weiterführende Erklärung mit detaillierten Hintergrundinfos zu NCE finden sich [hier](https://towardsdatascience.com/noise-contrastive-estimation-246446ea9aba) und [hier](http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf).\n",
     "\n",
-    "\n",
-    "\n",
-    "- Tensorflow Placeholder initialisieren\n",
-    "- embeddings initialisieren: für jedes unique Wort die eingestellte Anzahl Features (Dimension) mit random Wert zwischen 0 und 1\n",
-    "- NCE Weights\n",
-    "- NCE Bias\n",
-    "- Lernrate wird exponentiell mit exp_decay_lr veringert\n",
-    "- GradientDescentOptimizer\n",
-    "- Kurz erklären warum normalization doof war\n",
-    "\n"
+    "In einer früheren Version des Notebooks wurde in diesem Abschnitt auch noch eine normalisierung der WordEmbeddings auf Werte zwischen 0 und 1 durchgeführt. In zahlreichen Testläufen konnte sich dadurch jedoch keine verbesserte Genauigkeit oder Perfomance ausmachen und die Ergebnisse der Cosine-Similarity wurden verfaälscht, weswegen dieser Part auskommentiert ist.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.197224577336219\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = np.log(0.1/0.9)\n",
+    "print(test)"
    ]
   },
   {
@@ -1494,7 +1502,7 @@
    "metadata": {},
    "source": [
     "# Training: \n",
-    "... hier passiert das eigtl Training"
+    "Alle Vorbeireitungsschritte des Notebooks werden hier zusammengeführt. Das Modell wird mit den eingestellten Parametern und den definierten Input-Daten trainiert, die Zwischenstände werden ausgegeben und die finalen WordEmbeddings werden gespeichert."
    ]
   },
   {
@@ -1750,8 +1758,6 @@
     "        batch_inputs, batch_labels = generate_batch(batch_size, targets_list, labels_list)\n",
     "        feed_dict = {train_inputs: batch_inputs, train_labels: batch_labels, iteration: step}\n",
     "    \n",
-    "        # We perform one update step by evaluating the optimizer op (including it\n",
-    "        # in the list of returned values for session.run()\n",
     "        # Ausführen eines einzelnen Update Steps, durch Evaluierung des GradientDescent Optimizers\n",
     "        # Minimieren des Loss und Updaten der Gewichte\n",
     "        _, loss_val, learn_rate = session.run(\n",
@@ -1779,8 +1785,8 @@
    "metadata": {},
    "source": [
     "# Dokumenten-Vektoren generieren:\n",
-    "Je Anfragetext wird ein Dokumenten-Vektor aus den Word-Embeddings der jeweiligen Wörter des Textes abgeleitet.\n",
-    "Dabei werden alle Word-Embeddings eines Dokuments spaltenweise gemittelt."
+    "Die im vorherigen Schritt trainierten Word-Embeddings können nun genutzt werden um pro Anfragetext ein Dokumenten-Vektor aus den Word-Embeddings der jeweiligen Wörter des Textes abgeleitet.\n",
+    "Dabei werden alle Word-Embeddings eines Dokuments spaltenweise gemittelt um ein Dokument anhand eines einzelnen Wertes zu representieren."
    ]
   },
   {
@@ -1822,7 +1828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Delete Null-Rows, da aufgrund von Fehlern in Preprocessing einige wenige leere Preprocessed Listen entstanden sind:"
+    "Durch vereinzelte Fehler im Preprocessing entstehen einige Null-Rows die hier manuell korriegiert werden müssen:"
    ]
   },
   {
@@ -1888,7 +1894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data mit Dokumenten-Vektoren:"
+    "Auszug aus den Daten mit Dokumenten-Vektoren:"
    ]
   },
   {
@@ -2222,7 +2228,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Da TSNE recht rechenintensiv ist wird aus Performancegründen nur eine Stichprobe der Anfragen betrachtet"
+    "Da TSNE recht rechenintensiv ist wird aus Performancegründen nur eine Stichprobe der Anfragen betrachtet\n",
+    "\n",
+    "Mit den errechneten Document-Embeddings erhalten wir eine hochdimensionale (in unserem Fall 300) und komplexe Datenstruktur, die sich dank des t-SNE Algorithmus in geringeren Dimensionen, meist 2- oder 3-Dimensional, visualisieren lässt. Natürlich erzeigt diese Verringerung einen gewissen Informationsverlust, der wie im folgenden Beschrieben möglichst gering gehalten werden soll. Eine Darstellung unserer Document-Embeddings mittels t-SNE ist besonders geeignet um Strukturen im visualisierten Datensatz, wie lokale Nachbarschaften oder Wort-/Dokumenten-Gruppierung, zu erkennen. Ähnliche Anfragen werden sich somit hoffentlich clustern und es entsteht eine dreidimensionale Visualisierung, die einen ersten Überblick über die semantischen Zusammenhänge zwischen den Anfragetexten gibt. Ähnliche Anfragetexte (hier: Document-Embeddings) werden mit hoher Wahrscheinlichkeit über das gleiche Thema handeln.\n",
+    "\n",
+    "## t-SNE Grundprinzip:\n",
+    "Wie so oft, muss das Rad nicht neu Erfunden werden und man kann eine optimierte Implementierung des t-SNE bereits über das sklearn-kit beziehen. Um zu verstehen, was sich im Hintergrund abspielt, hier ein Versuch die Funktionsweise anhand eines Beispiels zu erklären:\n",
+    "\n",
+    "**Das Ziel**: Punkte aus dem 2-Dimensionalen Raum, 1-Dimensional darzustellen.\n",
+    "\n",
+    "<img src=\"Images/tSNE_Ziel.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "\n",
+    "**Abstände Messen:** Dazu wird ein Punkt in den Fokus genommen und die Abstände zu den anderen Punkten wird Normalverteilt gemessen. Aus der höheren Dimension wird also die Entfernung auf der reduzierten Dimension abgebildet und dann die Entfernung zur Normalverteilungskurve gemessen.\n",
+    "\n",
+    "<img src=\"Images/tSNE_Normalverteilt.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "\n",
+    "**Normalverteilung in Matrix überführen:** Dadurch ist es möglich eine Matrix aufzubauen, wo zu jedem Punkt die entfernung zu einem anderen Punkt (bzw. dessen Entfernung zur Normalverteilungskurve) abgebildet werden kann. Eine Entfernung von einem Punkt zu sich selbst macht hierbei natürlich keinen Sinn.\n",
+    "\n",
+    "<img src=\"Images/tSNE_Matrix1.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "\n",
+    "**Wiederholung mit t-Verteilung:** Im nächsten Schritt wiederholen wird der gesamte Prozess bis hierhin wiederholt, jedoch nicht mit der t-Verteilung und einem Freiheitsgrad (Cauchy-Verteilung) anstelle der Normalverteilung. Es entsteht eine weit unpräzisere Annordnung der Punkte in unserer t-Matrix:\n",
+    "\n",
+    "<img src=\"Images/tSNE_Matrix2.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "\n",
+    "Auch auf die x-Achse projeziert ergeben die Entfernungen (noch) keinen Sinn:\n",
+    "\n",
+    "<img src=\"Images/tSNE_t_map.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "\n",
+    "**t-Verteilung und Normalverteilung angleichen:** Im nächsten Schritt versuchen wir, die Punkte in der niedrigeren Dimension (hier: 1-D, bzw. x-Achse) der t-Verteilung so lange zu verschieben, bis dieser der, der Normalverteilung gleichen. Dazu schiebt der t-SNE Algorithmus immer einen Punkt in der Matrix näher an seine Ziel-Koordinate und vollzieht den gleichen Schritt auf der x-Achse.\n",
+    "\n",
+    "<img src=\"Images/tSNE_t_finish.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "\n",
+    "\n",
+    "### Warum wird die t-Verteilung hier benötigt? \n",
+    "Hier wird es kompliziert: Das zugrundeliegende Verfahren erfordert ein tiefergehendes mathematisches Verständnis und sprengt den Rahmen des Notebooks. Hilfreiche Links und Sekundärliteratur finden sich [hier](https://www.oreilly.com/learning/an-illustrated-introduction-to-the-t-sne-algorithm) und [hier](http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf). \n",
+    "<br><br>Eine kurze Erklärung in eigenen Worten:\n",
+    "Der Ansatz für die Nutzung der t-Verteilung liegt im Unterschied der Verteilungsfunktionen. \n",
+    "Würde beim reduzieren der Dimensionen eines Datensatzes die Normalverteilung herangezogen werden, so käme es zu einer Disbalance der Verteilung von Punkten und deren Distanz zu Ihren Nachbarn. Der Grund hierfür ist der große Unterschied des Maßes einer Entfernung in unterschiedlichen Dimensionen, welche der Algorithmus versucht abzubilden. Um dieser Divergenz an Maßen gerecht zu werden, nutzt t-SNE die t-Verteilung, welche in den Ausenbereichen einen viel geringeren Abstieg hat und generell Flacher und nicht so intensiv gipfelnd ist wie die Normalverteilung. Konkret bedeutet das: Trotzdem zwei Punkte in der Ausgangsdimension sehr weit voneinder entfernt sind, können diese in der niedrigeren Dimension eine Ähnlichkeit aufweisen.\n",
+    "\n",
+    "[TODO] Quellen. http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf"
    ]
   },
   {
