Added Literature References for all of the notebook

--- a/FDS_Word2Vec.ipynb
+++ b/FDS_Word2Vec.ipynb
@@ -27,12 +27,14 @@
     "Als Grundlage und grober Leitfaden für das Projekt diente das TensoFlow-Tutorial [Vector Representations of Words](https://www.tensorflow.org/tutorials/representation/word2vec). Ein großteil der Architekturideen und Implementationsbausteine musste jedoch umgebaut werden und auf die speziellen Bedürfnisse unseres Datensatzes als auch die Ziele der Projektarbeit angepasst werden.\n",
     "\n",
     "Für allgemeine Hintergrundinformationen zu den einzelnen hier im Modul angewandte Techniken und auch Details zur Entscheidungsfindung für bestimmte Ansätze, lohnt sich zudem ein Blick in das [Exposé](Documents/NN-Projekt-Expose.pdf).\n",
-    "\n"
+    "\n",
+    "**Qu\n",
+    "Quellengestützte Aussagen und direkt/indirekt übernommene Inhalte sind mit einem dreistelligen Tag [XXX] versehen und können anhand diesem im Literaturverzeichnis am Ende des Notebooks eingesehen werden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -103,7 +105,7 @@
     "Die Daten wurden schon im Zuge der Werkstudententätigkeit von S. Jüngling im Vorfeld bezogen und weitestgehend aufbereitet.\n",
     "Dabei wurden die Texte auf ihre bedeutungstragenden Begriffe reduziert und die Wörter lemmatisiert.\n",
     "\n",
-    "Bitte achten Sie darauf, die Daten gemäß der Anleitung in der README.md Datei herunterzuladen."
+    "Beim benutzen dieses Notebooks bitte darauf achten, die Daten gemäß der Anleitung in der README.md Datei herunterzuladen."
    ]
   },
   {
@@ -892,8 +894,7 @@
     "Vergleichen wir beispielsweise die Word Embeddings der Wörter \"Hund\" und \"Katze\", so werden bestimmte Features innerhalb der beiden Vektoren eine Ähnlichkeit haben, u.a. an der Stelle wo das Modell die Kategorie \"Tier\" trainiert hat. Anhand eines Beispiels, in dem die Word Embedding Values mit Farben je nach Wert ersetzt wurden, lässt sich dieses Prinzip gut veranschaulichen:\n",
     "\n",
     "<img src=\"Images/king-man-woman-embedding.png\" alt=\"drawing\" width=\"500\"/>\n",
-    "\n",
-    "TODO/QUELLE: https://jalammar.github.io/illustrated-word2vec/\n",
+    "Quelle: [WED]\n",
     "\n",
     "\n",
     "### Language Modelling\n",
@@ -903,12 +904,14 @@
     "Folgende Abbildung skizziert die generelle Architektur eines Skip-Gram Modells:\n",
     "\n",
     "<img src=\"Images/skip_gram_net_architecuture.png\" alt=\"drawing\" width=\"600\"/>\n",
+    "Quelle: [SAM]\n",
+    "\n",
     "Im Notebook kommt es jedoch zu einigen Abweichungen von der Standard-Architektur, insbesondere bei der Klassifikation (siehe später). <br>\n",
     "\n",
     "Natürlich muss ein solches Language-Modell zunächst ausgiebig trainiert werden. Mittels Context-Windows, also ein Ausschnitt von umgebenden Wörtern, versuchen wir Wort-Paare aus Target- und Label-Wörtern zu erstellen, die häufig zusammen auftreten. Angenommen wir nutzen Window-Size=2, dann betrachten wir in jedem Wort eines Satzes die zwei Wörter (\"labels\") vor und nach dem fokussierten Wort (\"target\") und notieren dieses gemeinsame Auftreten. In folgendem Beispiel wird die Context-Window Methode an einem Skip-Gram Modell dargestellt. Das Wort \"red\" ist ein target (=input) und die jeweils umgebenden Wörter sind die labels (=output):\n",
     "\n",
     "<img src=\"Images/skipgram-sliding-window-samples.png\" alt=\"drawing\" width=\"400\"/>\n",
-    "TODO/QUELLE: http://mccormickml.com/2016/04/19/word2vec-tutorial-the-skip-gram-model/\n",
+    "Quelle: [SWS]\n",
     "\n",
     "Context-Windows arbeiten mit einzelnen Sätzen und beim Beginn und Ende eines jeden Satzes muss zudem darauf geachtet werden, dass mit dem Window nicht vor oder nach dem Satz (Nan) geslided wird. Die folgende Implementierung erzeugt nun die target-label paare, wobei anstelle realer Wörter im weiteren Verlauf die Wort-Indizes genutzt werden (siehe Beispiel). "
    ]
@@ -1177,7 +1180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build und Trainiere Skip-Gram Model\n",
+    "# Baue und Trainiere das Skip-Gram Model\n",
     "Bis hierhin sollte klar sein was die Funktion eines Skip-Gram Models und deren target-label Paaren, eines Context Window und eines Batches ist. Mit diesem Wissen steht dem eigentlichen Model-Training nichts mehr im Wege! Fast. Vor dem Training bietet sich zunächst die letzte Möglichkeit, mit einstellbaren Parametern Einfluss auf den Verlauf des Trainings zu nehmen. Neben den bereits bekannten Begriffen müssen noch ein paar wenige, neue Parameter verstanden und eingestellt werden, die einen erheblichen Einfluss auf den weiteren Trainingsverlauf ausüben."
    ]
   },
@@ -1286,9 +1289,9 @@
     "\n",
     "## Noise Contrastive estimation (NCE)\n",
     "\n",
-    "Remember: Für einen gegebenes Wort soll das Modell die Wahrscheinlichkeit der passenden Kontextwörter bestimmen. Ein weitverbreitetes und erfahrungsgemäß gutes Klassifizierungsverfahren hierfür ist der Softmax-Classifier. Dieser stellte sich aber während des Trainings als maximal rechenintensiv heraus, da für jedes Wort das ganze Vokabular (mehr als 1 Mio Wörter) mit Wahrscheinlichkeiten belegt werden muss, bzw. die Gewichtsmatrix `[embedding_dim x vocab_dim]` sehr groß ist ([Wiederholung: Softmax-Klassifier](https://www.pyimagesearch.com/2016/09/12/softmax-classifiers-explained/), [Hintergrundwissen: Warum kein Softmax](https://arxiv.org/pdf/1410.8251.pdf))\n",
+    "Remember: Für einen gegebenes Wort soll das Modell die Wahrscheinlichkeit der passenden Kontextwörter bestimmen. Ein weitverbreitetes und erfahrungsgemäß gutes Klassifizierungsverfahren hierfür ist der Softmax-Classifier. Dieser stellte sich aber während des Trainings als maximal rechenintensiv heraus, da für jedes Wort das ganze Vokabular (mehr als 1 Mio Wörter) mit Wahrscheinlichkeiten belegt werden muss, bzw. die Gewichtsmatrix `[embedding_dim x vocab_dim]` sehr groß ist ([Wiederholung: Softmax-Klassifier](https://www.pyimagesearch.com/2016/09/12/softmax-classifiers-explained/), [Hintergrundwissen: Warum kein Softmax?](https://arxiv.org/pdf/1410.8251.pdf))\n",
     "\n",
-    "Um diese Rechenoperation zu vermeiden, aber trotzdem keine spürbaren Einbußen beim Training der Emebdings zu erleiden, kann NCE genutzt werden. Hierbei wird das Gesamtvokabular, also die Menge an Wörtern die auf Ähnlichkeit überprüft werden, auf einen Teil mit dem/den passenden Label/n und einen Teil mit gänzlich unpassenden Wörtern (\"Contrastive Noise\") reduziert. Zudem wird die Vorhersage auf ein Klassifikationsproblem (richtig/falsch) reduziert (vgl. Softmax: Normalverteilt), labels und noise bekommen also die Werte 0 und 1. Das Modell kann somit anhand sehr guter und schlechter Begriffe Lernen, ohne dabei jedes Mal das gesamte Vokabular durchforsten zu müssen. Hierin liegt zugleich der entscheidende Punkt bei NCE: Wir können unsere Noise-Verteilung frei bestimmen, z.B. können nur Wörter mit ganz geringer Häufigkeit selektiert, oder alle Wörter mit gleicher Wahrscheinlichkeit oder einfach eine Normalverteilung. Durch diese künstliche Reduzierung der Grunddatenmenge wird jedoch nicht die Genauigkeit des Models in Mitleidenschaft gezogen ([TODO] QUELLE: http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf). \n",
+    "Um diese Rechenoperation zu vermeiden, aber trotzdem keine spürbaren Einbußen beim Training der Emebdings zu erleiden, kann NCE genutzt werden. Hierbei wird das Gesamtvokabular, also die Menge an Wörtern die auf Ähnlichkeit überprüft werden, auf einen Teil mit dem/den passenden Label/n und einen Teil mit gänzlich unpassenden Wörtern (\"Contrastive Noise\") reduziert. Zudem wird die Vorhersage auf ein Klassifikationsproblem (richtig/falsch) reduziert (vgl. Softmax: Normalverteilt), labels und noise bekommen also die Werte 0 und 1. Das Modell kann somit anhand sehr guter und schlechter Begriffe Lernen, ohne dabei jedes Mal das gesamte Vokabular durchforsten zu müssen. Hierin liegt zugleich der entscheidende Punkt bei NCE: Wir können unsere Noise-Verteilung frei bestimmen, z.B. können nur Wörter mit ganz geringer Häufigkeit selektiert, oder alle Wörter mit gleicher Wahrscheinlichkeit oder einfach eine Normalverteilung. Durch diese künstliche Reduzierung der Grunddatenmenge wird jedoch nicht die Genauigkeit des Models in Mitleidenschaft gezogen (QUELLE: [NCE]). \n",
     "Da das Problem bereits auf eine klassische \"Richtig oder Falsch\"-Frage reduziert wurde, kann in NCE die logistische Regression zur Klassifikation herangezogen werden und dann unsere WordEmbeddings mit dem GradientDescentOptimizer optimiert werden. Eine weiterführende Erklärung mit detaillierten Hintergrundinfos zu NCE finden sich [hier](https://towardsdatascience.com/noise-contrastive-estimation-246446ea9aba) und [hier](http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf).\n",
     "\n",
     "In einer früheren Version des Notebooks wurde in diesem Abschnitt auch noch eine Normalisierung der WordEmbeddings auf Werte zwischen 0 und 1 durchgeführt. In zahlreichen Testläufen konnte sich dadurch jedoch keine verbesserte Genauigkeit oder Performance ausmachen und die Ergebnisse der Cosine-Similarity wurden verfälscht, weswegen dieser Part auskommentiert ist.\n"
@@ -1776,9 +1779,7 @@
     "![image](Images/Cosine_Similarity_Formula.png)\n",
     "\n",
     "\n",
-    "TODO/QUELLE: https://en.wikipedia.org/wiki/Cosine_similarity\n",
-    "\n",
-    "[1]:http://www.quotedb.com/quotes/2112\n",
+    "Quelle: [CSM]\n",
     "\n",
     "Beispiel:\n",
     "\n",
@@ -1941,26 +1942,32 @@
     "**Das Ziel**: Punkte aus dem 2-dimensionalen Raum, 1-dimensional darzustellen.\n",
     "\n",
     "<img src=\"Images/tSNE_Ziel.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "Quelle: [TSN]\n",
     "\n",
     "**Abstände Messen:** Dazu wird ein Punkt in den Fokus genommen und die Abstände zu den anderen Punkten wird normalverteilt gemessen. Aus der höheren Dimension wird also die Entfernung auf der reduzierten Dimension abgebildet und dann die Entfernung zur Normalverteilungskurve gemessen.\n",
     "\n",
     "<img src=\"Images/tSNE_Normalverteilt.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "Quelle: [TSN]\n",
     "\n",
     "**Normalverteilung in Matrix überführen:** Dadurch ist es möglich, eine Matrix aufzubauen, wo zu jedem Punkt die Entfernung zu einem anderen Punkt (bzw. dessen Entfernung zur Normalverteilungskurve) abgebildet werden kann. Eine Entfernung von einem Punkt zu sich selbst macht hierbei natürlich keinen Sinn.\n",
     "\n",
     "<img src=\"Images/tSNE_Matrix1.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "Quelle: [TSN]\n",
     "\n",
     "**Wiederholung mit t-Verteilung:** Im nächsten Schritt wiederholen wird der gesamte Prozess bis hierhin wiederholt, jedoch nicht mit der t-Verteilung und einem Freiheitsgrad (Cauchy-Verteilung) anstelle der Normalverteilung. Es entsteht eine weit unpräzisere Anordnung der Punkte in unserer t-Matrix:\n",
     "\n",
     "<img src=\"Images/tSNE_Matrix2.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "Quelle: [TSN]\n",
     "\n",
     "Auch auf die x-Achse projeziert ergeben die Entfernungen (noch) keinen Sinn:\n",
     "\n",
     "<img src=\"Images/tSNE_t_map.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "Quelle: [TSN]\n",
     "\n",
     "**t-Verteilung und Normalverteilung angleichen:** Im nächsten Schritt versuchen wir, die Punkte in der niedrigeren Dimension (hier: 1-D, bzw. x-Achse) der t-Verteilung so lange zu verschieben, bis dieser denen, der Normalverteilung gleichen. Dazu schiebt der t-SNE Algorithmus immer einen Punkt in der Matrix näher an seine Ziel-Koordinate und vollzieht den gleichen Schritt auf der x-Achse.\n",
     "\n",
     "<img src=\"Images/tSNE_t_finish.png\" alt=\"drawing\" width=\"300\"/>\n",
+    "Quelle: [TSN]\n",
     "\n",
     "**Weiterer Verlauf:** Im Beispiel wurde von 2- auf 1-Dimensionalität reduziert. Voreingestellte Parameter im Notebook trainieren jedoch Word-Embeddings mit deutlich mehr Dimensionen (hier: 300). Schrittweise reduziert t-SNE die Dimensionen eine nach der anderen bis zur gewünschten Ziel-Dimension. Für normale Bildschirme wären das die Dimensionen 1-3, die zum Abschluss des Notebooks beispielhaft erzeugt werden.\n",
     "\n",
@@ -1970,8 +1977,7 @@
     "<br><br>Eine kurze Erklärung in eigenen Worten:\n",
     "Der Ansatz für die Nutzung der t-Verteilung liegt im Unterschied der Verteilungsfunktionen. \n",
     "Würde beim reduzieren der Dimensionen eines Datensatzes die Normalverteilung herangezogen werden, so käme es zu einer Disbalance der Verteilung von Punkten und deren Distanz zu Ihren Nachbarn. Der Grund hierfür ist der große Unterschied des Maßes einer Entfernung in unterschiedlichen Dimensionen, welche der Algorithmus versucht abzubilden. Um dieser Divergenz an Maßen gerecht zu werden, nutzt t-SNE die t-Verteilung (daher auch das \"t\"), welche in den Ausenbereichen einen viel geringeren Abstieg hat und generell flacher und nicht so intensiv gipfelnd ist wie die Normalverteilung. Konkret bedeutet das: Trotzdem zwei Punkte in der Ausgangsdimension sehr weit voneinder entfernt sind, können diese in der niedrigeren Dimension eine Ähnlichkeit aufweisen.\n",
-    "\n",
-    "[TODO] Quellen. http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf\n",
+    "Quelle: [TDS]\n",
     "\n",
     "### Hyperparameter\n",
     "\n",
@@ -1980,15 +1986,14 @@
     "Beim tunen der **Anzahl an Iterationen** konnten auf den FragDenStaat Datensatz beste Ergebnisse bei ca. 1000 Iterationen festgestellt werden. Diese Zahl stellt jedoch keine fixe Empfehlung dar und muss je nach Grunddatenmenge und Struktur des Datensatzes ausprobiert und angepasst werden. Am Beispil in der folgendne Grafik lässt sich demonstrativ erkennen, dass bei zu wenigen Iterationen eine schlechte, punktlastige Gruppierung erfolgt. Tritt dieses Symptom beim Plotten der Graphen auf, so ist höchstwahrscheinlich das Training zu früh beendet worden. \n",
     "\n",
     "<img src=\"Images/tSNE_iterations.png\" alt=\"drawing\" width=\"1000\"/>\n",
-    "[TODO] Quelle: https://distill.pub/2016/misread-tsne/\n",
-    "\n",
+    "Quelle: [HYP] \n",
     "\n",
     "\n",
     "**Perplexity**, dass zweite wichtige Feature bei der Feineinstellung des t-SNE bestimmt, wie die Gewichtung von lokalen und globalen Eigenschaften der Punkte in unserem Datensatz in die Erstellung der niedrig-Dimensionalen Plots mit einfließen soll. Die Auswirkungnen verschiedener Werte bei der perplexity sind weitreichend und zugleich nur schwer nachvollziehbar. Während des Trainings wurde hier mit viel Try-And-Error ein idealer Wert versucht anzunähern (hier: 25). Im bebilderten Beispiel wird ein Datensatz mit zwei Clustern und unterschiedlichen Perplexity-Werten (2-100) mittels t-SNE neu berechnet. Im Paper [TODO]: Quelle [\"Visualizing Data using t-SNE\"](http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf) wird empfohlen, die Perplexit Werte zwischen fünf und 50 zu initialisieren. Im Beispiel können wir das ursprüngliche Clustering, wenn auch in unterschiedlichen Formen und intensitäten, gut nachvollziehen. Werte außerhalb dieses empfohlenen Bereichs erzeugen aber gänzlich andere Strukturen. Zu geringe perplexity-Werte (2) zeigen Cluster mit zu hoher lokaler Dominanz. Bei zu hohe perplexity-Werte (100) werden die beiden Cluster vereint und können gar nicht mehr unterschieden werden.\n",
     "Abschließend lässt sich zusammenfassen, dass der perplexity-Wert eine grobe Richtung vorgibt, wieviele enge Nachbarn ein Punkt unseres Datensatzes hat und individuelle für jeden Datensatz ermittelt werden muss.\n",
     "\n",
     "<img src=\"Images/tSNE_perplexity.png\" alt=\"drawing\" width=\"1000\"/>\n",
-    "[TODO] Quelle: https://distill.pub/2016/misread-tsne/"
+    "Quelle: [HYP]"
    ]
   },
   {
@@ -3038,11 +3043,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Literature\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"WED\"></a>[WED]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "The Illustrated Word2vec – Jay Alammar – Visualizing machine ....\" 27 März. 2019, http://jalammar.github.io/illustrated-word2vec/. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"SAM\"></a>[SAM]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"Word2Vec Tutorial - The Skip-Gram Model · Chris McCormick.\" 19 Apr.. 2016, http://mccormickml.com/2016/04/19/word2vec-tutorial-the-skip-gram-model/. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"SWS\"></a>[SWS]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"The Illustrated Word2vec – Jay Alammar – Visualizing machine ....\" 27 März. 2019, http://jalammar.github.io/illustrated-word2vec/. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"NCE\"></a>[NCE]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"Notes on Noise Contrastive Estimation and Negative Sampling.\" http://demo.clab.cs.cmu.edu/cdyer/nce_notes.pdf. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"CSM\"></a>[CSM]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"Cosine similarity - Wikipedia.\" https://en.wikipedia.org/wiki/Cosine_similarity. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"TSN\"></a>[TSN]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"Visualizing data using t-SNE - SlideShare.\" https://www.slideshare.net/KyeongUkJang/visualizing-data-using-tsne-149111155. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"TDS\"></a>[TDS]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"Visualizing Data using t-SNE - Journal of Machine Learning Research.\" http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <a id=\"HYP\"></a>[HYP]\n",
+    "        </td>\n",
+    "        <td>\n",
+    "\"How to Use t-SNE Effectively - Distill.pub.\" 13 Okt.. 2016, https://distill.pub/2016/misread-tsne/. Aufgerufen am 22 Juni. 2019.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
